laying things out in grid format, 12 columns

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .square {
+    aspect-ratio: 1/1;
+  }
+  .card {
+    aspect-ratio: 3/4;
+  }
+}
